# genai-sop-generator

./: .gitignore  README.md  code.md  code_.py  index.html  main.py  pyproject.toml  test.py  utils.py
notebooks/: dashboard.html  google.html  netflix.html  test.ipynb
src/: driver.py  extractor.py  llm.py  prompt.py
